--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-modal": "^3.11.2",
     "react-navigation": "^4.4.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "react-typed": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
