--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.2",
     "react-modal": "^3.11.2",
     "react-navigation": "^4.4.2",
     "react-responsive-modal": "^5.1.1",
