--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "date-fns": "^2.16.1",
+    "form-control-react": "^1.0.9",
     "material-ui-search-bar": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
@@ -20,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-material-ui-form-validator": "^2.1.1",
+    "react-md": "^2.3.1",
     "react-modal": "^3.11.2",
     "react-navigation": "^4.4.2",
     "react-responsive-modal": "^5.1.1",
