Fix urls when hosting on GCP

--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /
+- url: /.*
   static_files: build/index.html
   upload: build/index.html
   
