Fix routing and app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -3,9 +3,12 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /.*
+- url: /
   static_files: build/index.html
   upload: build/index.html
   
 - url: /
   static_dir: build
+
+
+
