--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "material-table": "^1.69.1",
     "material-ui-search-bar": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
+    "mdbreact": "^4.27.0",
+    "mui-datatables": "^3.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
